test/gpu/native/errors/gpuTrace.nopoi.good
gpuTrace.chpl:12: In function 'main':
gpuTrace.chpl:14: error: Loop is marked with @assertOnGpu but is not eligible for execution on a GPU
gpuTrace.chpl:18: note: use of ineligible standard library function 'doSomething' in loop body
